--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta http-equiv="Content-Type" />
-		<title>Document</title>
+		<title></title>
 	</head>
 	<body>
 		<div id="app"></div>
