--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		/>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta http-equiv="Content-Type" />
+		<base href="/">
 		<title>Document</title>
 	</head>
 	<body>
